// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`package manager client commands generates the correct commands for npm 1`] = `
Array [
  "install",
  "gatsby",
]
`;

exports[`package manager client commands generates the correct commands for npm 2`] = `
Array [
  "install",
  "--save-dev",
  "eslint",
]
`;

exports[`package manager client commands generates the correct commands for yarn 1`] = `
Array [
  "add",
  "-W",
  "gatsby",
]
`;

exports[`package manager client commands generates the correct commands for yarn 2`] = `
Array [
  "add",
  "-W",
  "--dev",
  "eslint",
]
`;
